--- a/res/css/structures/_TopLeftMenuButton.scss
+++ b/res/css/structures/_TopLeftMenuButton.scss
@@ -25,6 +25,7 @@ limitations under the License.
  li.mx_TopLeftMenu_icon_settings { mask-image: url('$(res)/img/feather-customised/settings.svg');
    /*change for watcha*/
    background-color:#00E5E5;
+   width: 20px;
    /*change for watcha*/
    color:#00E5E5;
    -webkit-mask-repeat: no-repeat;
